[gd_scene load_steps=5 format=3 uid="uid://n1hxhin2wqal"]

[ext_resource type="Script" uid="uid://b4r7vo2n6dxqe" path="res://NodeChat/welcome/tscn/download_from_server.gd" id="1_tswhc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu56o"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q56ci"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0uow6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="downloadFromServer" type="Window"]
auto_translate_mode = 1
title = "选择上传节点集"
initial_position = 4
size = Vector2i(500, 300)
transient = true
exclusive = true
script = ExtResource("1_tswhc")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yu56o")

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "此操作会将云端的数据同步到本地（纯目录对应，不适用新下载的不同目录的插件）"

[node name="addpos" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="res1" type="CheckBox" parent="Control/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/addpos"]
unique_name_in_owner = true
layout_mode = 2
text = "插件脚本（*.json,*.gd）"

[node name="res2" type="CheckBox" parent="Control/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/addpos"]
unique_name_in_owner = true
layout_mode = 2
text = "节点集文件（*.nodeset）"

[node name="res3" type="CheckBox" parent="Control/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/addpos"]
unique_name_in_owner = true
layout_mode = 2
text = "其他文件（插件目录存储的其他数据）"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="accept" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_q56ci")
theme_override_styles/disabled = SubResource("StyleBoxFlat_q56ci")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_q56ci")
theme_override_styles/hover = SubResource("StyleBoxFlat_q56ci")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q56ci")
theme_override_styles/normal = SubResource("StyleBoxFlat_q56ci")
text = " 确定 "

[node name="refuse" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_0uow6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0uow6")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0uow6")
theme_override_styles/hover = SubResource("StyleBoxFlat_0uow6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0uow6")
theme_override_styles/normal = SubResource("StyleBoxFlat_0uow6")
text = " 取消 "

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/refuse" to="." method="_on_refuse_pressed"]
